# practicum_2025_autumn

./: README.md
src/: CMakeLists.txt  diffusion_fem.cpp
